[package]
name = "poker-log-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "pklpc"
path = "src/main.rs"
bench = false

[lib]
name = "pklp"
path = "src/lib.rs"
crate-type = ["staticlib"]
bench = true

[dependencies]
rayon = "1.5"
stackvector = "1.1.1"


[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "pklp_bench"
harness = false
